# saikai

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  pyproject.toml  recap.py  recap_terminal.py  saikai.py  saikai_mirror.py  saikai_provider.py  saikai_remote.py  saikai_terminal.py
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  LAUNCH.md  demo-recording.md  demo-script.md  zenn-article.md
docs/design/: codex-provider.md  remote-roots.md
docs/superpowers/: 2026-06-16-b2-kickoff.md
docs/superpowers/plans/: 2026-05-27-recap-tui-redesign.md  2026-06-11-recap-public-release-impl.md  2026-06-12-agent-provider-abstraction.md  2026-06-13-saikai-web-mirror-interactive.md  2026-06-13-saikai-web-mirror-readonly.md  2026-06-14-saikai-web-mirror-mouse-keys.md  2026-06-16-saikai-context-lifecycle.md  2026-07-16-synchronized-output-atomicity.md
docs/superpowers/specs/: 2026-05-27-recap-tui-redesign-design.md  2026-06-10-recap-public-release-design.md  2026-06-11-saikai-rename-and-publication-design.md  2026-06-12-agent-provider-abstraction-design.md  2026-06-12-key-system-three-things.md  2026-06-12-keyboard-first-design.md  2026-06-13-saikai-web-mirror-interactive-design.md  2026-06-14-saikai-web-mirror-mouse-keys-design.md  2026-06-16-saikai-context-lifecycle-design.md  2026-07-16-synchronized-output-atomicity-design.md
scripts/: audit_demo_cast.py  check-history.sh  demo_fixture.py  make_demo_gif.py  make_screenshots.py  mock_claude.py  probe_claude_seams.py  record_demo.py
scripts/hooks/: pre-push
tests/: test_bulk_toggle.py  test_codex_provider.py  test_config.py  test_demo_audit.py  test_demo_fixture.py  test_flag_width.py  test_fleet_discovery.py  test_keyboard_leader.py  test_marker_legend.py  test_mirror_driver.py  test_mirror_hub.py  test_mirror_input.py  test_mirror_snapshot.py  test_needs_attention.py  test_pane_dump.py  test_providers.py  test_pty_backend.py  test_remote_roots.py  test_resource_bounds.py  test_sort_recency.py  test_split_divider.py  test_status_regroup.py  test_terminal_concurrency.py  test_terminal_watchdog.py
