[project]
name = "saikai"
dynamic = ["version"]   # read from saikai.py __version__ (regex source — no import at build)
description = "A terminal session browser for Claude Code — browse, search, group, and resume past sessions, with a built-in split-live pane (on by default)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
# Anonymous by design; personalize the display name here if you like (optional).
authors = [{ name = "saikai contributors" }]
keywords = ["claude", "claude-code", "tui", "textual", "sessions", "cli"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    # Formal support is LIMITED to the verified daily-driven platform. Linux,
    # WSL2, and macOS remain experimental targets with CI PTY smoke coverage.
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.50",
    "pyte>=0.8",
    "pywinpty>=2.0 ; sys_platform == 'win32'",
    "ptyprocess>=0.7 ; sys_platform != 'win32'",
    "platformdirs>=3.6",
]

[project.scripts]
saikai = "saikai:main"

[project.urls]
Homepage = "https://github.com/m-morino/saikai"
Repository = "https://github.com/m-morino/saikai"
Issues = "https://github.com/m-morino/saikai/issues"
Changelog = "https://github.com/m-morino/saikai/blob/master/CHANGELOG.md"

[tool.hatch.version]
path = "saikai.py"          # regex source: reads __version__ without importing saikai.py

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# saikai.py imports both sibling modules — all three must ship.
only-include = ["saikai.py", "saikai_terminal.py", "saikai_provider.py"]

[tool.hatch.build.targets.sdist]
include = [
    "saikai.py",
    "saikai_terminal.py",
    "saikai_provider.py",
    "pyproject.toml",
    "README.md",
    "LICENSE",
    "THIRD-PARTY-NOTICES.md",
    ".gitignore",
]
