[project]
name = "saikai"
dynamic = ["version"]   # read from saikai.py __version__ (regex source — no import at build)
description = "Find, resume, and supervise Claude Code sessions across repositories and worktrees."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
# Anonymous by design; personalize the display name here if you like (optional).
authors = [{ name = "saikai contributors" }]
keywords = ["claude", "claude-code", "tui", "textual", "sessions", "cli"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    # Formal support is LIMITED to the verified daily-driven platform. Linux,
    # WSL2, and macOS remain experimental targets with CI PTY smoke coverage.
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.50",
    "pyte>=0.8",
    "pywinpty>=2.0 ; sys_platform == 'win32'",
    "ptyprocess>=0.7 ; sys_platform != 'win32'",
    "platformdirs>=3.6",
    "segno>=1.6.6",
    # In-process TLS cert minting for the LAN mirror (TLS is on by default). Bundled
    # so https works on Windows too, where the openssl CLI usually isn't on PATH —
    # openssl is only a fallback. (#review-tls-windows)
    "cryptography>=41",
]

[project.scripts]
saikai = "saikai:main"

[project.urls]
Homepage = "https://github.com/m-morino/saikai"
Repository = "https://github.com/m-morino/saikai"
Issues = "https://github.com/m-morino/saikai/issues"
Changelog = "https://github.com/m-morino/saikai/blob/master/CHANGELOG.md"

[tool.hatch.version]
path = "saikai.py"          # regex source: reads __version__ without importing saikai.py

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# saikai.py imports its sibling modules; the mirror ships its vendored xterm.js.
only-include = ["saikai.py", "saikai_terminal.py", "saikai_provider.py", "saikai_mirror.py", "saikai_mirror_static"]

[tool.hatch.build.targets.sdist]
include = [
    "saikai.py",
    "saikai_terminal.py",
    "saikai_provider.py",
    "saikai_mirror.py",
    "saikai_mirror_static",
    "pyproject.toml",
    "README.md",
    "LICENSE",
    "THIRD-PARTY-NOTICES.md",
    ".gitignore",
]
